tests/ui/consts/issue-32829.stderr
error[E0080]: evaluation panicked: foo
  --> $DIR/issue-32829.rs:1:22
   |
LL | static S : u64 = { { panic!("foo"); 0 } };
   |                      ^^^^^^^^^^^^^ could not evaluate static initializer

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
